add wssh + add username to devices + change config.repo_address + installer script + start script

--- a/app/views/dispositivos/_form.html.erb
+++ b/app/views/dispositivos/_form.html.erb
@@ -38,6 +38,10 @@
     <%= f.text_field :ip, class: "form-control"  %>
   </div>
   <div class="form-group">
+    <%= f.label t('username') %><br>
+    <%= f.text_field :username, class: "form-control" %>
+  </div>
+  <div class="form-group">
     <%= f.label t('super_user_pass') %><br>
     <%= f.text_field :passenable, class: "form-control" %>
   </div>
