--- a/app/views/dispositivos/show.html.erb
+++ b/app/views/dispositivos/show.html.erb
@@ -124,6 +124,11 @@
                   </p>
 
                   <p>
+                    <strong class="form-control"><%= t('username') %>:  <%= @dispositivo.username %></strong>
+
+                  </p>
+
+                  <p>
                     <strong class="form-control"><%= t('super_user_pass') %>:  <%= @dispositivo.passenable %></strong>
 
                   </p>
